FIX: wordwrap #1107

--- a/www/sites/all/themes/emindhub/less/emindhub-styles.less
+++ b/www/sites/all/themes/emindhub/less/emindhub-styles.less
@@ -748,7 +748,11 @@ header#title {
 }
 .emh-submission-answer,
 .emh-submission-answer * {
-  word-break: break-all;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -o-hyphens: auto;
+  hyphens: auto;
 }
 
 .emh-submission-answer-conversation {
